@@ -30,7 +30,7 @@ function events.init(_class)
     mq.event('eventResist', 'Your target resisted the #1# spell#*#', events.eventResist)
     mq.event('eventOMMMask', '#*#You feel a gaze of deadly power focusing on you#*#', events.eventOMMMask)
     mq.event('eventCannotRez', '#*#This corpse cannot be resurrected#*#', events.cannotRez)
-    mq.event('eventCannotRezNew', '#*#This corpse has already accepted a resurrection.#*#', events.cannotRez)
+    mq.event('eventCannotRezNew', '#*#This corpse has already accepted a resurrection#*#', events.cannotRez)
     mq.event('eventFizzles', 'Your #*#spell fizzles#*#', events.fizzled)
     mq.event('eventMissedNote', 'You miss a note, bringing your song to a close#*#', events.fizzled)
     mq.event('eventInterrupt', 'Your spell is interrupted#*#', events.interrupted)
